2007-10-13  Callum McKenzie  <callum@spooky-possum.org>

	* gweather.pc.in (Libs): Make sure the library is linked in. Patch
	courtesy of Matthias Clasen (bug #479172). Also added -lm to the
	libs list for completeness.

2007-07-12  Callum McKenzie  <callum@spooky-possum.org>

	* weather-metar.c (make_time): Fix the logic to only fiddle the
	day number on the 1st. Based on Elliott Hughes patch from bug
	#455012. Improved comments.

2007-07-11  Callum McKenzie  <callum@spooky-possum.org>

	* weather-sun.c (calc_sun): Use the current time rather than the
	observation time to calculate the sunrise and sunset times. Fixes
	the case where the observation gets horribly out of date. See bug
	#455012.

2007-05-13  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Add GNOME_APPLETS_CFLAGS to get
	GConf includes. Fixes the build for me.

2007-01-05  Kjartan Maraas  <kmaraas@gnome.org>

	* weather-met.c: s/malloc.h/stdlib.h/
	Closes bug #387179. Patch from Roy Marples.

2006-08-07  Davyd Madeley  <davyd@madeley.id.au>

	* weather-bom.c:
	* weather-met.c:
	- catch possible NULL pointers when parsing strings. Patches from
	  Kevin Bauder <kevin.bauder@gmail.com>. Closes #170628.

2006-07-23  Davyd Madeley  <davyd@madeley.id.au>

	* gweather.schemas.in: update schema descriptions, patch from
	  Adam Petaccia. Closes #167195.

2006-07-02  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Cygwin portability. Patch from Cygwin Ports Maintainer.
	Closes bug #341495.

2006-01-31  Davyd Madeley  <davyd@madeley.id.au>

	* weather.c: replace sscanf with g_strsplit to prevent stack smashing.
	  Closes original #327406.

2006-01-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* gweather-prefs.c: add "atm" as possible unit in translator comment
	for DEFAULT_PRESSURE_UNIT. Closes #327275.

2006-01-15  Davyd Madeley  <davyd@madeley.id.au>

	* gweather-prefs.c:
	* weather-priv.h:
	* weather.c:
	* weather.h: add atmospheres as a unit of pressure