@@ -1,5 +1,9 @@
 2007-10-13  Callum McKenzie  <callum@spooky-possum.org>
 
+	* weather.c (temperature_string): Use appropriate unicode Degree
+	Celsius and Degree Fahrenheit symbols instead of the generic
+	Degree symbol. Patch from Alex Jones (Bug #468887).
+
 	* gweather.pc.in (Libs): Make sure the library is linked in. Patch
 	courtesy of Matthias Clasen (bug #479172). Also added -lm to the
 	libs list for completeness.
